--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
 </head>
 <body>
     <h1>トルスカ語→チャーイクハン諸語変換機</h1>
-    <textarea id="inputText" rows="10" cols="50" placeholder="トルスカ語のテキストを入力してください"></textarea>
+    <textarea id="inputText" rows="10" cols="50" placeholder="トルスカ語の単語を複数入力してください"></textarea>
     <button onclick="convertText()">変換する</button>
     <h2>変換結果</h2>
-    <div id="outputText"></div>
+    <pre id="outputText"></pre>
 
     <script>
         function convertText() {
             const input = document.getElementById("inputText").value;
-            const output = transformText(input);
+            const output = transformMultipleWords(input);
             document.getElementById("outputText").textContent = output;
         }
     </script>
